--- a/changing-customer-server/pom.xml
+++ b/changing-customer-server/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.changing.technology</groupId>
-    <artifactId>changing-server</artifactId>
+    <artifactId>changing-customer-server</artifactId>
     <packaging>war</packaging>
     <version>1.0.0</version>
 
