--- a/changing-background-server/src/main/resources/application.properties
+++ b/changing-background-server/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 # 属性配置参考 https://www.cnblogs.com/HaveChen/p/11095513.html
 
+# 数据源配置
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/changing-bg?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+
+# mybatis配置
+mybatis.mapper-locations=classpath:mappers/*Mapper.xml
+mybatis.config-location=classpath:config/mybatis-config.xml
+mybatis.type-aliases-package=com.changing.bg.model.entity
