--- a/changing-background-server/src/main/resources/application.properties
+++ b/changing-background-server/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.datasource.password=root
 mybatis.mapper-locations=classpath:mappers/*Mapper.xml
 mybatis.config-location=classpath:config/mybatis-config.xml
 mybatis.type-aliases-package=com.changing.bg.model.entity
+
+# 日志配置
+logging.config=classpath:config/logback-config.xml
