--- a/changing-background-server/src/main/resources/application.properties
+++ b/changing-background-server/src/main/resources/application.properties
@@ -13,3 +13,6 @@ mybatis.type-aliases-package=com.changing.bg.model.entity
 
 # 日志配置
 logging.config=classpath:config/logback-config.xml
+
+# mongodb
+spring.data.mongodb.uri=mongodb://127.0.0.1:27017/changing_bg
