--- a/changing-background-server/src/main/resources/application.properties
+++ b/changing-background-server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # 属性配置参考 https://www.cnblogs.com/HaveChen/p/11095513.html
 
 # 数据源配置
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/changing-bg?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
@@ -16,3 +16,6 @@ logging.config=classpath:config/logback-config.xml
 
 # mongodb
 spring.data.mongodb.uri=mongodb://127.0.0.1:27017/changing_bg
+
+# 打开校验，oauth请求必须是 post 请求
+security.oauth2.authorization.check-token-access=true
