--- a/changing-background-server/pom.xml
+++ b/changing-background-server/pom.xml
@@ -44,6 +44,11 @@
             <version>2.0.0.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.5</version>
+        </dependency>
 
     </dependencies>
 
