login request return access token

--- a/changing-background-server/src/main/resources/application.properties
+++ b/changing-background-server/src/main/resources/application.properties
@@ -20,8 +20,8 @@ spring.data.mongodb.uri=mongodb://127.0.0.1:27017/changing_bg
 # 打开校验，oauth请求必须是 post 请求
 security.oauth2.authorization.check-token-access=true
 
-#auth-server=http://127.0.0.1:9090/oauth
-#security.oauth2.client.client-id=changing_bg
-#security.oauth2.client.client-secret=123456
-#security.oauth2.client.access-token-uri=${auth-server}/token
+auth-server=http://127.0.0.1:9090/oauth
+security.oauth2.client.access-token-uri=${auth-server}/token
+security.oauth2.client.client-id=changing_bg
+security.oauth2.client.client-secret=123456
 #security.oauth2.client.user-authorization-uri=${auth-server}/authorize
