--- a/changing-background-server/src/main/resources/application.properties
+++ b/changing-background-server/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 # mybatis配置
-mybatis.mapper-locations=classpath:mappers/*Mapper.xml
+mybatis.mapper-locations=classpath:mappers/**/*Mapper.xml
 mybatis.config-location=classpath:config/mybatis-config.xml
 mybatis.type-aliases-package=com.changing.bg.model.entity
 
