--- a/changing-background-front/package.json
+++ b/changing-background-front/package.json
@@ -51,7 +51,8 @@
     "webpack-merge": "^4.1.0",
     "element-ui": "2.7.2",
     "axios": "0.19.2",
-    "qs": "6.9.0"
+    "qs": "6.9.0",
+    "vuex": "3.0.0"
   },
   "engines": {
     "node": ">= 6.0.0",
