--- a/changing-customer-server/src/main/resources/application.properties
+++ b/changing-customer-server/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.password=root
 # mybatis配置
 mybatis.mapper-locations=classpath:mappers/**/*Mapper.xml
 mybatis.config-location=classpath:config/mybatis-config.xml
-mybatis.type-aliases-package=com.changing.bg.model.entity1
+mybatis.type-aliases-package=com.changing.customer.model.entity
 
 # 日志配置
 logging.config=classpath:config/logback-config.xml
